--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.11",
+    "@mui/styled-engine-sc": "^5.11.11",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.2",
     "next": "13.2.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-feather": "^2.0.10",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.6"
   }
 }
